Card index fixes

--- a/src/components/astrotest/astrotest.astro
+++ b/src/components/astrotest/astrotest.astro
@@ -1,4 +1,6 @@
 ---
+import { Debug } from 'astro:components';
+
 export interface Props {
   text: string;
 }
@@ -15,6 +17,7 @@ const ENV_EDITOR: boolean = ENV_BOOKSHOP_LIVE || false;
   </p>
   <p>Test data: <span>{text}</span></p>
   <p>Middleware: <span>{typeof Astro.locals}</span></p>
+  {typeof Astro.locals === "object" && <Debug locals={Object.keys(Astro.locals)} />}
 </div>
 
 <style>
