--- a/src/shared/astro/icon.astro
+++ b/src/shared/astro/icon.astro
@@ -37,7 +37,7 @@ const iconData = iconToSVG(icon, { height });
     data-icon-name={name}
     {...iconData.attributes}
     set:html={iconData.body}
-    style={`color: ${color};`}
+    style={{color}}
 />
 
 <style>
